--- a/MicroProyecto1/vagrantfile
+++ b/MicroProyecto1/vagrantfile
@@ -1,1 +1,36 @@
 
+# -- mode: ruby --
+# vi: set ft=ruby :
+
+Vagrant.configure("2") do |config|
+
+  if Vagrant.has_plugin? "vagrant-vbguest"
+    config.vbguest.no_install  = true
+    config.vbguest.auto_update = false
+    config.vbguest.no_remote   = true
+  end
+
+  config.vm.define :haproxy do |haproxy|
+    haproxy.vm.box = "bento/ubuntu-20.04"
+    haproxy.vm.network :private_network, ip: "192.168.50.2"
+    #haproxy.vm.provision "shell", path: "haproxyServerScript.sh"
+    haproxy.vm.hostname = "haproxy"
+  end
+
+  NODOS=2
+
+  1.upto(NODOS) do |i|
+    config.vm.define vm_name = "webserver#{i}" do |nodo|
+    config.vm.box ="bento/ubuntu-20.04"
+     nodo.vm.hostname = "webserver#{i}"
+     nodo.vm.network "private_network", ip: "192.168.50.#{2+i}"
+     nodo.vm.provider :virtualbox do |vb|
+     vb.name = "webserver#{i}"
+     vb.memory = 2048
+     vb.cpus = 1
+     end
+     #nodo.vm.provision "shell", path: "haproxyClientScript.sh", args: "#{i} 192.168.50.#{1+i}"
+    end
+  end
+  
+end
