--- a/MicroProyecto1/haproxy.cfg
+++ b/MicroProyecto1/haproxy.cfg
@@ -43,10 +43,11 @@ backend web-backend
    stats auth admin:admin
    stats uri /haproxy?stats
 
-   server nodo1 192.168.100.4:80 check
-   server nodo2 192.168.100.5:80 check
-   server master 192.168.100.3:80 check
+   server web1 192.168.50.3:5080 check
+   server web2 192.168.50.4:5080 check
+   server webbackup1 192.168.50.3:6080 check backup
+   server webbackup2 192.168.50.4:6080 check backup
 
 frontend http
-  bind *:80
+  bind *:5080
   default_backend web-backend
