--- a/MicroProyecto1/preseed.yaml
+++ b/MicroProyecto1/preseed.yaml
@@ -1,4 +1,3 @@
----
 storage_pools:
 - name: default
   driver: dir
@@ -21,8 +20,9 @@ profiles:
       parent: lxdbr0
       type: nic
 cluster:
-  server_name: webserver2
+  server_name: haproxy
   enabled: true
 config:
   core.trust_password: cluster
-  core.https_address: 192.168.50.4:8443
+  core.https_address: 192.168.50.2:8443
+
